<resources>
    <string name="app_name">Android2DZ2.1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Пропустить</string>
    <string name="text">Начать работу</string>
    <string name="text1">text</string>
    <string name="notes">Заметки</string>
    <string name="notes_2">Поиск заметок</string>
    <string name="btn">+</string>
    <string name="ok">Готово</string>
    <string name="text_1">нужно сделать</string>
    <string name="registr">Регистрация по номеру</string>
    <string name="call">+996</string>
    <string name="cod">Ваш код</string>
    <string name="get">Получить код</string>
    <string name="ok_ok">подтведить</string>
    <string name="set">Отправить снова</string>
</resources>