<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.signin.SignInFragment">

    <ImageView
        android:id="@+id/im_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/notes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp"/>

    <TextView
        android:id="@+id/tv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/im_notes"
        android:textColor="@color/grey_2"
        android:text="@string/registr"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_tv"
        android:layout_marginTop="40dp"
        android:text="@string/call"
        android:layout_marginHorizontal="25dp"
        android:inputType="phone"
        android:background="@drawable/round"
        android:drawableStart="@drawable/ic_outline_call_24"
        android:textSize="20sp"
        android:padding="10dp"
        android:paddingStart="18dp"
        android:textColor="@color/grey_2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_call"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/round"
        android:drawableStart="@drawable/ic_outline_markunread_24"
        android:textSize="20sp"
        android:padding="15dp"
        android:hint="@string/cod"
        android:textColorHint="@color/white"
        android:paddingStart="15dp"
        android:textColor="@color/grey_2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/get"
        app:cornerRadius="15dp"
        android:textSize="15sp"
        android:backgroundTint="@color/orange_2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cod_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_cod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:visibility="invisible"
        android:text="@string/ok_ok"
        app:cornerRadius="15dp"
        android:textSize="15sp"
        android:backgroundTint="@color/orange_2"/>

    <TextView
        android:id="@+id/btn_set_cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cod_2"
        android:layout_marginTop="15dp"
        android:textColor="@color/orange_2"/>



</androidx.constraintlayout.widget.ConstraintLayout>