<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.note.NoteFragment">
    <TextView
        android:id="@+id/linearManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_2"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingTop="14dp"
        android:paddingEnd="15dp"
        android:paddingBottom="6dp"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/shape"
        app:drawableStartCompat="@drawable/ic_baseline_menu_24"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gridManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_2"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingTop="14dp"
        android:paddingEnd="15dp"
        android:paddingBottom="6dp"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/shape"
        app:drawableStartCompat="@drawable/ic_baseline_menu_24"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/one"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/notes_2"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notResView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/btn_material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_material"
        android:layout_width="60sp"
        android:layout_height="72dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/orange_2"
        android:text="@string/btn"
        android:textSize="35sp"
        app:cornerRadius="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>